[fix] Fix display problems with single repeatable rows not showing up

--- a/css/tabs.css
+++ b/css/tabs.css
@@ -58,6 +58,10 @@
     display: none;
 }
 
+.cmb-tabs-wrap .cmb2-wrap .cmb-row.cmb-repeat-row {
+    display: block;
+}
+
 /* Vertical tabs */
 .cmb-tabs-wrap.cmb-tabs-vertical {
     -ms-flex-wrap: nowrap;
